display start time of event

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,3 +1,6 @@
+<div>
+  <strong>Start time: </strong><%= @players_event.start_at.to_s(:rfc822) %>
+</div>
 <h1><strong>Players</strong></h1>
 <div id="players">
 <% i = 1 %>
