add start_time to api

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <strong>Start time: </strong><%= @players_event.start_at.to_s(:rfc822) %>
+  <strong>Start time: </strong><%= @players_event.start_time %>
 </div>
 <h1><strong>Players</strong></h1>
 <div id="players">
