--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -2,7 +2,7 @@
 <%= turbo_stream_from(@goalies_event, :registrations) %>
 <div style="margin: 20px">
 <div style="margin-bottom: 10px">
-  <strong>Start time: </strong><%= @players_event.start_time %>
+  <strong>Start time: </strong><%= @players_event.start_at.strftime('%b %e, %l:%M %p') %>
 </div>
 <h4><strong>Players</strong></h4>
 <%= render "registrations/list", event: @players_event %>
