--- a/app/views/events/upcoming.html.erb
+++ b/app/views/events/upcoming.html.erb
@@ -1,15 +1,15 @@
-<div style="margin: 20px" data-controller="board" data-board-start-value="<%=@event.start_at.to_i %>">
+<div style="margin-top: 20px" data-controller="board" data-board-start-value="<%=@event.start_at.to_i %>">
 <%= turbo_frame_tag('search-results') do %>
   <%= turbo_frame_tag('search-form') do %>
     <%= form_with(url: '/upcoming', method: 'get', data: {'turbo-frame': 'search-results', 'board-target': 'form'}) do %>
       <%= hidden_field_tag("event_identifier", "0") %>
     <% end %>
-    <div class="container">
+    <div class="container mx-0">
       <div class="row">
-        <div class="col-lg-8 col-md-8 col-sm-12">
+        <div class="col-lg-7 col-md-8 col-sm-12">
           <%= render "upcoming", event: @event %>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
+        <div class="col-lg-5 col-md-4 col-sm-12">
           <%= render "upcoming", event: @next_event %>
         </div>
       </div>
