--- a/app/views/registrations/_registration.html.erb
+++ b/app/views/registrations/_registration.html.erb
@@ -1,3 +1,3 @@
-<div id="<%= dom_id registration %>" style="font-size: 2em;">
+<div id="<%= dom_id registration %>">
   <%= registration.person.short_name %>
 </div>
